[Payments] Use themed background color.

Bug: 743173
Change-Id: Ie31e92bff4fda5907d45b931dd79caeac79b36ff