chrome/browser/ui/views/payments/payment_request_dialog_view.cc
@@ -389,7 +389,8 @@ void PaymentRequestDialogView::SetupSpinnerOverlay() {
   throbber_overlay_.SetVisible(false);
   // The throbber overlay has to have a solid white background to hide whatever
   // would be under it.
-  throbber_overlay_.SetBackground(views::CreateSolidBackground(SK_ColorWHITE));
+  throbber_overlay_.SetBackground(views::CreateThemedSolidBackground(
+      &throbber_overlay_, ui::NativeTheme::kColorId_WindowBackground));
 
   views::GridLayout* layout = throbber_overlay_.SetLayoutManager(
       std::make_unique<views::GridLayout>(&throbber_overlay_));
